--- a/src/main/webapp/resources/js/views/FightStart.html
+++ b/src/main/webapp/resources/js/views/FightStart.html
@@ -14,6 +14,7 @@
     <col width="100px" />
     <col width="100px" />
     <col width="100px" />
+    <col width="100px" />
     <col width="80px" />
     <col width="80px" />
     <col width="100px" />
@@ -21,11 +22,12 @@
     <col width="120px" />
 
     <thead>
-    <tr><th colspan="8">Live Game Info Feed</th> </tr>
+    <tr><th colspan="9">Live Game Info Feed</th> </tr>
     <tr>
 
         <th style = "background-color:#BDB76B;color:#ffffff;">Username</th>
         <th style = "background-color:#BDB76B;color:#ffffff;">Available</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Equity</th>
         <th style = "background-color:#BDB76B;color:#ffffff;">M.Margin</th>
         <th style = "background-color:#BDB76B;color:#ffffff;">Margin %</th>
         <th style = "background-color:#BDB76B;color:#ffffff;">Pair</th>
@@ -38,8 +40,9 @@
     <tbody>
     <tr>
         <td>{{currUser.username}}</td>
-        <td>{{currUser.account.balance}}</td>
-        <td>{{currUserMargin}}</td>
+        <td>{{currAvailable}}</td>
+        <td>equity</td>//balance + stake + p/l
+        <td>{{mMargin}}</td>
         <td>{{currMarginPercent}}%</td>
         <td>{{currentUserFinalPair.symbols}}</td>
         <td>{{currUserDirection}}</td>
@@ -49,15 +52,16 @@
     </tr>
     <tr>
         <td>{{askedUser.username}}</td>
-        <td>{{askedUser.account.balance}}</td>
-        <td>{{askedUserMargin}}</td>
+        <td>{{oppAvailable}}</td>
+        <td>equity</td>//balance + stake + p/l
+        <td>{{mMargin}}</td>
         <td>{{askedMarginPercent}}%</td>
         <td>{{askedUserFinalPair.symbols}}</td>
         <td>{{askedUserDirection}}</td>
         <td>{{askedUserPosSize}}</td>
         <td>$</td>
     </tr>
-    <tr><th colspan="8">Game Time {{ counter}}</th> </tr>
+    <tr><th colspan="9">Game Time {{ counter}}</th> </tr>
     </tbody>
 
 </table>
