Populating more all fields in live feed except p&l and variable data

--- a/src/main/webapp/resources/js/views/FightStart.html
+++ b/src/main/webapp/resources/js/views/FightStart.html
@@ -44,21 +44,21 @@
         <td>equity</td>//balance + stake + p/l
         <td>{{mMargin}}</td>
         <td>{{currMarginPercent}}%</td>
-        <td>{{currentUserFinalPair.symbols}}</td>
-        <td>{{currUserDirection}}</td>
-        <td>{{currUserPosSize}}</td>
+        <td>{{currPair}}</td>
+        <td>{{currDir}}</td>
+        <td>{{currValue}}</td>
         <td>$</td>
 
     </tr>
     <tr>
-        <td>{{askedUser.username}}</td>
+        <td>{{oppUsername}}</td>
         <td>{{oppAvailable}}</td>
         <td>equity</td>//balance + stake + p/l
         <td>{{mMargin}}</td>
         <td>{{askedMarginPercent}}%</td>
-        <td>{{askedUserFinalPair.symbols}}</td>
-        <td>{{askedUserDirection}}</td>
-        <td>{{askedUserPosSize}}</td>
+        <td>{{oppPair}}</td>
+        <td>{{oppDir}}</td>
+        <td>{{oppValue}}</td>
         <td>$</td>
     </tr>
     <tr><th colspan="9">Game Time {{ counter}}</th> </tr>
