--- a/src/main/webapp/resources/js/views/FightStart.html
+++ b/src/main/webapp/resources/js/views/FightStart.html
@@ -41,7 +41,7 @@
     <tr>
         <td>{{currUser.username}}</td>
         <td>{{currAvailableView}}</td>
-        <td>{{currEquity}}</td>
+        <td>{{currEquityView}}</td>
         <td>{{mMargin}}</td>
         <td>{{currMarginPercent}}%</td>
         <td>{{currPair}}</td>
@@ -58,7 +58,7 @@
         <td>{{askedMarginPercent}}%</td>
         <td>{{oppPair}}</td>
         <td>{{oppDir}}</td>
-        <td>{{opponentCurrentPos}}</td>
+        <td>{{opponentCurrentPosView}}</td>
         <td>${{oppPLView}}</td>
     </tr>
     <tr><th colspan="9">Game Time {{ counter}}</th> </tr>
