Getting both objects

--- a/src/main/webapp/resources/js/views/Challenge.html
+++ b/src/main/webapp/resources/js/views/Challenge.html
@@ -1,2 +1,17 @@
-got in to Challenge view
-{{askedUserID}}
+
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/html" ng-app="myApp" ng-controller="ChallengeController">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+
+
+</head>
+<body>
+
+
+<table align="center">
+    <thead>
+    <tr><th colspan="9">{{currUser.username}} challenged {{askedUser.username}} To a Forex Fight!!</th> </tr>
+    </thead>
+</table>
