Returning entire list of Challenges when challenges slink pressed in NAVBAR

--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -58,11 +58,12 @@
 
                 <!--<li><a ng-href="#/login">Login</a>-->
                 <!--<li><a ng-href="#/register">Register</a>-->
-
-
                 <!--<li ng-show='loggedIn'><a href="#Login">LogOut <span class="glyphicon glyphicon-user"></span></a></li>-->
 
-                <li ng-show='loggedIn'><a ng-href="" ng-click = "logOut()" class="btn btn-warning">LogOut<span class="glyphicon glyphicon-user"></span></a></li>
+                <li><a ng-href="#/openChallenges" >Challenges <span class="glyphicon glyphicon-envelope"></span></a></li>
+
+
+                <li ng-show='loggedIn'><a ng-href="" ng-click = "logOut()" class="btn btn-danger">LogOut<span class="glyphicon glyphicon-user"></span></a></li>
                 <li ng-show='!loggedIn'> <a ng-href="#/logreg" >Trade Now <span class="glyphicon glyphicon-user"></span></a></li>
 
             </ul>
