--- a/src/main/webapp/resources/js/views/AllUsers.html
+++ b/src/main/webapp/resources/js/views/AllUsers.html
@@ -1,10 +1,9 @@
-<!--<body ng-app="myApp" ng-controller="myCtrl" data-ng-init="init()">-->
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html" ng-app="myApp">
 
-<!--<head>-->
-    <!--<link rel="stylesheet" type="text/css" href="allUsers.css">-->
-<!--</head>-->
+<head>
+    <link rel="stylesheet" type="text/css" href="allUsers.css">
+</head>
 
 <body>
 
