Two Tables, one showing challenges sent, the other showing challenges recieved

--- a/src/main/webapp/resources/js/views/OpenChallenges.html
+++ b/src/main/webapp/resources/js/views/OpenChallenges.html
@@ -12,10 +12,13 @@
     <thead>
     <tr><th colspan="9">Hi <b>{{currUser.username}}</b> Challenges you are involved in are found here</th> </tr>
     </thead>
+</table>
 
-
-
-
+<br>
+<table align="center">
+    <thead>
+    <tr><th colspan="9">Challenges sent by {{currUser.username}}</th> </tr>
+    </thead>
 </table>
 
 <table align="center">
@@ -29,13 +32,42 @@
     </thead>
 
     <tbody>
-    <tr ng-repeat="x in challenges" >
+    <tr ng-repeat="x in sentChallenges" >
         <td>{{x.id}}</td>
         <td>{{x.challengerId}}</td>
         <td>{{x.opponentId}}</td>
         <td ng-if="x.open">{{"Open"}}</td>
         <td ng-if="x.open ==  false">{{"Completed"}}</td>
-        <!--<td><button ng-click="getStats()" class="btn btn-success">Stats</button></td>-->
+
+    </tr>
+    </tbody>
+
+</table>
+
+<br>
+<table align="center">
+    <thead>
+    <tr><th colspan="9">Challenges recieved by {{currUser.username}}</th> </tr>
+    </thead>
+</table>
+
+<table align="center">
+    <thead>
+    <tr>
+        <th>Challenge ID</th>
+        <th>ChallengerID</th>
+        <th>Opponent ID</th>
+        <th>Status</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr ng-repeat="x in challengesRecieved" >
+        <td>{{x.id}}</td>
+        <td>{{x.challengerId}}</td>
+        <td>{{x.opponentId}}</td>
+        <td ng-if="x.open">{{"Open"}}</td>
+        <td ng-if="x.open ==  false">{{"Completed"}}</td>
 
     </tr>
     </tbody>
