Wihtdraw Challenge is removing the proper challenge from the table and the view (Still not live refreshing)

--- a/src/main/webapp/resources/js/views/OpenChallenges.html
+++ b/src/main/webapp/resources/js/views/OpenChallenges.html
@@ -39,7 +39,7 @@
         <td>{{x.opponentId}}</td>
         <td ng-if="x.open">{{"Open"}}</td>
         <td ng-if="x.open ==  false">{{"Completed"}}</td>
-        <td><button ng-click="withdraw()" class="btn btn-danger">Withdraw Challenge</button></td>
+        <td><button ng-click="withdraw(x)" class="btn btn-danger">Withdraw Challenge</button></td>
 
 
     </tr>
