--- a/src/main/webapp/resources/js/views/OpenChallenges.html
+++ b/src/main/webapp/resources/js/views/OpenChallenges.html
@@ -24,9 +24,8 @@
 <table align="center">
     <thead>
     <tr>
-        <th>Challenge ID</th>
-        <th>ChallengerID</th>
-        <th>Opponent ID</th>
+        <th>Challenger</th>
+        <th>Opponent</th>
         <th>Status</th>
         <th>Option</th>
     </tr>
@@ -34,9 +33,8 @@
 
     <tbody>
     <tr ng-repeat="x in sentChallenges" >
-        <td>{{x.id}}</td>
-        <td>{{x.challengerId}}</td>
-        <td>{{x.opponentId}}</td>
+        <td>{{x.challengerName}}</td>
+        <td>{{x.opponentName}}</td>
         <td ng-if="x.open">{{"Open"}}</td>
         <td ng-if="x.open ==  false">{{"Completed"}}</td>
         <td><button ng-click="withdraw(x)" class="btn btn-danger">Withdraw Challenge</button></td>
@@ -57,9 +55,8 @@
 <table align="center">
     <thead>
     <tr>
-        <th>Challenge ID</th>
-        <th>ChallengerID</th>
-        <th>Opponent ID</th>
+        <th>Challenger</th>
+        <th>Opponent</th>
         <th>Status</th>
         <th colspan="2">Option</th>
     </tr>
@@ -67,9 +64,8 @@
 
     <tbody>
     <tr ng-repeat="x in challengesRecieved" >
-        <td>{{x.id}}</td>
-        <td>{{x.challengerId}}</td>
-        <td>{{x.opponentId}}</td>
+        <td>{{x.challengerName}}</td>
+        <td>{{x.opponentName}}</td>
         <td ng-if="x.open">{{"Open"}}</td>
         <td ng-if="x.open ==  false">{{"Completed"}}</td>
         <td><button ng-click="accept()" class="btn btn-success">Accept</button></td>
