--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -50,7 +50,6 @@
                     </ul>
                 </li>
 
-                <li>ff</li>
 
                 <li ng-show='loggedIn'><a ng-href="#/allUsers">All Users</a>
                 <li ng-show='loggedIn'><a ng-href="#/onlineUsers">See Who's Online</a>
@@ -61,10 +60,13 @@
                 <!--<li ng-show='loggedIn'><a href="#Login">LogOut <span class="glyphicon glyphicon-user"></span></a></li>-->
 
                 <li><a ng-href="#/openChallenges" >Challenges <span class="glyphicon glyphicon-envelope"></span></a></li>
+                <li><a ng-href="#/soloTrade">Trade</a></li>
+
+
 
 
                 <li ng-show='loggedIn'><a ng-href="" ng-click = "logOut()" class="btn btn-danger">LogOut<span class="glyphicon glyphicon-user"></span></a></li>
-                <li ng-show='!loggedIn'> <a ng-href="#/logreg" >Trade Now <span class="glyphicon glyphicon-user"></span></a></li>
+                <li ng-show='!loggedIn'> <a ng-href="#/logreg" >Access Site<span class="glyphicon glyphicon-user"></span></a></li>
 
             </ul>
 
