--- a/src/main/webapp/resources/js/views/SoloTrade.html
+++ b/src/main/webapp/resources/js/views/SoloTrade.html
@@ -56,12 +56,12 @@
         <td bgcolor="	#48D1CC"align="center">..%</td>
         <td bgcolor="#F0F8FF" align="center">{{x.bid}}</td>
         <td bgcolor="#F0F8FF" align="center">
-            <md-button ng-click="toggleLeft(x.symbols)" class="md-accent" ng-model = "dir" ng-init="dir='buy'">
+            <md-button ng-click="toggleLeft(x.symbols)" class="md-primary md-raised"  ng-model = "dir" ng-init="dir='buy'">
             Buy
            </md-button></td>
         <td bgcolor="#F0F8FF" align="center">{{x.ask}}</td>
         <td bgcolor="#F0F8FF" align="center">
-            <md-button ng-click="toggleLeft(x.symbols)" class="md-accent" ng-model = "dir" ng-init="dir='sell'">
+            <md-button ng-click="toggleLeft(x.symbols)" class="md-primary md-raised" ng-model = "dir" ng-init="dir='sell'">
                 Sell
             </md-button></td>
         </td>
@@ -84,10 +84,10 @@
 Select Lot Size  {{currUser.username}}
             {{p}} {{dir}}
         </p>
-        <md-button ng-click="toggleLeft()" class="md-accent">
+        <md-button ng-click="toggleLeft()" class="md-primary md-raised">
             Close this Sidenav
         </md-button>
     </md-content>
-    <button class="btn btn-default btn-block btn-success"ng-click=""  >Fight!!</button>
+    <button class="btn btn-default btn-block btn-info"ng-click="trade()"  >Open Position!!</button>
 
 </md-sidenav>
