--- a/src/main/webapp/resources/js/views/SoloTrade.html
+++ b/src/main/webapp/resources/js/views/SoloTrade.html
@@ -17,9 +17,9 @@
 
     <tbody>
     <tr>
-        <td>{{currUser.account.balance}}</td>
-        <td>{{currEquityView}}a</td>
-        <td>{{mMargin}}a</td>
+        <td>${{available}}</td>
+        <td>${{currEquityView}}a</td>
+        <td>${{mMargin}}</td>
         <td>${{currPLView}}</td>
     </tr>
     </tbody>
@@ -54,15 +54,17 @@
     <tr ng-repeat="x in pairs">
         <td align="left" colspan="2">{{x.symbols}}</td>
         <td bgcolor="	#48D1CC"align="center">..%</td>
+
         <td bgcolor="#F0F8FF" align="center">{{x.bid}}</td>
         <td bgcolor="#F0F8FF" align="center">
-            <md-button ng-click="toggleLeft(x,'buy')" class="md-primary md-raised">
-            Buy
+            <md-button ng-click="toggleLeft(x,'sell')" class="md-primary md-raised">
+            Sell
            </md-button></td>
+
         <td bgcolor="#F0F8FF" align="center">{{x.ask}}</td>
         <td bgcolor="#F0F8FF" align="center">
-            <md-button ng-click="toggleLeft(x,'sell')" class="md-primary md-raised">
-                Sell
+            <md-button ng-click="toggleLeft(x,'buy')" class="md-primary md-raised">
+                Buy
             </md-button></td>
         </td>
         <td bgcolor="#F0F8FF" align="center" colspan="2">{{x.high}}/{{x.low}}</td>
@@ -95,7 +97,7 @@
 
             <tbody md-body>
             <tr md-row>
-                <td>{{pairSym.symbols}}</td>
+                <td>{{pairChosen.symbols}}</td>
                 <td> {{direction}}</td>
                 <td><select ng-model="currUserStake" ng-options="x for x in stakes"></td>
             </tr>
