Real time p&l updating for DirectQuotes (Long) Error occuring regarding the toggleLeft() method, it has parameters the first time, but when closing the navbar, it has no parameters

--- a/src/main/webapp/resources/js/views/SoloTrade.html
+++ b/src/main/webapp/resources/js/views/SoloTrade.html
@@ -20,7 +20,7 @@
         <td>${{available}}</td>
         <td>${{currEquityView}}a</td>
         <td>${{mMargin}}</td>
-        <td>${{currPLView}}</td>
+        <td>${{profitAndLossView}}</td>
     </tr>
     </tbody>
 </table>
@@ -107,7 +107,7 @@
         </md-table-container>
 
 
-        <md-button ng-click="toggleLeft()" class="md-primary md-raised">
+        <md-button ng-click="toggleLeft('','')" class="md-primary md-raised">
             Close this Sidenav
         </md-button>
         <!--<h2><select ng-model="currUserStake" ng-options="x for x in stakes"></h2>-->
