Wrote new method to exit the side nav, works!!

--- a/src/main/webapp/resources/js/views/SoloTrade.html
+++ b/src/main/webapp/resources/js/views/SoloTrade.html
@@ -107,10 +107,9 @@
         </md-table-container>
 
 
-        <md-button ng-click="toggleLeft('','')" class="md-primary md-raised">
+        <md-button ng-click="closeToggleLeft()" class="md-primary md-raised">
             Close this Sidenav
         </md-button>
-        <!--<h2><select ng-model="currUserStake" ng-options="x for x in stakes"></h2>-->
 
     </md-content>
     <button class="btn btn-default btn-block btn-info"ng-click="trade()"  >Open Position!!</button>
