--- a/src/main/webapp/resources/js/views/SoloTrade.html
+++ b/src/main/webapp/resources/js/views/SoloTrade.html
@@ -18,7 +18,7 @@
     <tbody>
     <tr>
         <td>${{available}}</td>
-        <td>${{currEquityView}}a</td>
+        <td>${{equityView}}</td>
         <td>${{mMargin}}</td>
         <td>${{profitAndLossView}}</td>
     </tr>
