--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -60,7 +60,7 @@
                 <!--<li ng-show='loggedIn'><a href="#Login">LogOut <span class="glyphicon glyphicon-user"></span></a></li>-->
 
                 <li><a ng-href="#/openChallenges" >Challenges <span class="glyphicon glyphicon-envelope"></span></a></li>
-                <li><a ng-href="#/soloTrade">Trade</a></li>
+                <li><a ng-href="#/trade">Trade</a></li>
 
 
 
