--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -42,10 +42,10 @@
     <tr class="border_bottom">
         <th style = "background-color:#BDB76B;color:#ffffff;" colspan="2">Instrument</th>
         <th style = "background-color:#BDB76B;color:#ffffff;">Change</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;">Sell</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;"></th>
-        <th style = "background-color:#BDB76B;color:#ffffff;">Buy</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;"></th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Bid</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;"><i>action</i></th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Ask</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;"><i>action</i></th>
         <th style = "background-color:#BDB76B;color:#ffffff;" colspan="2">High/Low</th>
     </tr>
     </thead>
@@ -91,7 +91,7 @@
         <table md-table>
             <thead>
               <th>Instrument</th>
-              <th>Position</th>
+              <th>Action</th>
               <th>Stake</th>
             </thead>
 
