new row added, ng-if working (not as I want it to) added close position button, pressing sends the currency pair of that row I will then write a method to look thgouth the database for the open trade of that pair, then close out the trade, amending the Trade object to get a closing profit and loss and an end time stamp etc

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -51,7 +51,7 @@
     </thead>
 
     <tbody>
-    <tr ng-repeat="x in pairs">
+    <tr ng-repeat-start="x in pairs">
         <td align="left" colspan="2">{{x.symbols}}</td>
         <td bgcolor="	#48D1CC"align="center">..%</td>
 
@@ -70,6 +70,16 @@
         <td bgcolor="#F0F8FF" align="center" colspan="2">{{x.high}}/{{x.low}}</td>
         <!--<td bgcolor="#4286f4" align="center">{{x.spreadPips}}</td>-->
         <!--<td bgcolor="#f0f4b5" align="center">{{x.timeStampString}}</td>-->
+    </tr>
+    <tr ng-repeat-end="" ng-if="x.ask>1">
+        <td>{{x.symbols}}</td>
+        <td></td>
+        <td colspan="2">Value:$</td>
+        <td><button class="btn btn-default btn-block btn-danger"ng-click="closeTrade(x)"  >Close Position!!</button></td>
+        <td colspan="2">P/L :$</td>
+        <td></td>
+        <td></td>
+
     </tr>
     </tbody>
 </table>
