Removed old files (controllers, view pojo, dao's etc)

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -71,7 +71,7 @@
         <!--<td bgcolor="#4286f4" align="center">{{x.spreadPips}}</td>-->
         <!--<td bgcolor="#f0f4b5" align="center">{{x.timeStampString}}</td>-->
     </tr>
-    <tr ng-repeat-end="" ng-if="x.ask>1">
+    <tr ng-repeat-end="" ng-if="x.active">
         <td>{{x.symbols}}</td>
         <td></td>
         <td colspan="2">Value:$</td>
