--- a/src/main/webapp/resources/js/views/LogReg.html
+++ b/src/main/webapp/resources/js/views/LogReg.html
@@ -23,7 +23,7 @@
                         <div class="row">
                             <div class="col-lg-12">
 
-                                <div ng-app="myApp" ng-controller="LoginController">
+                                <div ng-app="myApp" ng-controller="LogRegController">
 
 
                                 <form id="login-form"   role="form" style="display: block;">
@@ -42,7 +42,7 @@
                                         <div class="form-group">
                                             <div class="row">
                                                 <div class="col-sm-6 col-sm-offset-3">
-                                                    <input type="button" name="login-submit" ng-click="submit()" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
+                                                    <input type="button" name="login-submit" ng-click="submitLogin()" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
                                                 </div>
                                             </div>
                                         </div>
@@ -65,7 +65,7 @@
 
                             </div>
 
-                                <div ng-app="myApp" ng-controller="RegisterController">
+                                <div ng-app="myApp" ng-controller="LogRegController">
 
 
 
@@ -94,7 +94,7 @@
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-sm-6 col-sm-offset-3">
-                                            <input type="button" ng-click="submit()" name="register" id="register" tabindex="4" class="form-control btn btn-register" value="Register Now">
+                                            <input type="button" ng-click="submitRegistration()" name="register" id="register" tabindex="4" class="form-control btn btn-register" value="Register Now">
                                         </div>
                                     </div>
                                 </div>
