--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -61,6 +61,7 @@
 
                 <li><a ng-href="#/openChallenges" >Challenges <span class="glyphicon glyphicon-envelope"></span></a></li>
                 <li><a ng-href="#/trade">Trade</a></li>
+                <li><a ng-href="#/ranks">Ranks</a></li>
 
 
 
