--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -34,21 +34,21 @@
 
                 <li><a ng-href="#/welcome">Home</a>
 
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Financial Markets Explained<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a ng-href="#/shares">Shares</a></li>
-                        <li><a ng-href="#/forex">Forex</a></li>
-                        <li><a href="#indices">Indices</a></li>
+                <!--<li class="dropdown">-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Financial Markets Explained<span class="caret"></span></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a ng-href="#/shares">Shares</a></li>-->
+                        <!--<li><a ng-href="#/forex">Forex</a></li>-->
+                        <!--<li><a href="#indices">Indices</a></li>-->
+                        <!--&lt;!&ndash;<li role="separator" class="divider"></li>&ndash;&gt;-->
+                        <!--<li><a href="#commodoties">Commodities</a></li>-->
+                        <!--<li><a href="#etfs">ETF's</a></li>-->
+                        <!--<li><a href="#options">Options</a></li>-->
+                        <!--<li><a href="#cfds">CFD's</a></li>-->
                         <!--<li role="separator" class="divider"></li>-->
-                        <li><a href="#commodoties">Commodities</a></li>
-                        <li><a href="#etfs">ETF's</a></li>
-                        <li><a href="#options">Options</a></li>
-                        <li><a href="#cfds">CFD's</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#contact">Contact us for further support</a></li>
-                    </ul>
-                </li>
+                        <!--<li><a href="#contact">Contact us for further support</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
 
 
                 <li ng-show='loggedIn'><a ng-href="#/allUsers">All Users</a>
