--- a/src/main/webapp/resources/js/views/OpenChallenges.html
+++ b/src/main/webapp/resources/js/views/OpenChallenges.html
@@ -68,7 +68,7 @@
         <td>{{x.opponentName}}</td>
         <td ng-if="x.open">{{"Open"}}</td>
         <td ng-if="x.open ==  false">{{"Completed"}}</td>
-        <td><button ng-click="accept()" class="btn btn-success">Accept</button></td>
+        <td><button ng-click="accept(x)" class="btn btn-success">Accept</button></td>
         <td><button ng-click="withdraw(x)" class="btn btn-warning">Decline</button></td>
 
 
