Equity view updated CHallenge showing stake

--- a/src/main/webapp/resources/js/views/OpenChallenges.html
+++ b/src/main/webapp/resources/js/views/OpenChallenges.html
@@ -27,6 +27,7 @@
         <th>Challenger</th>
         <th>Opponent</th>
         <th>Status</th>
+        <th>Stake</th>
         <th>Option</th>
     </tr>
     </thead>
@@ -37,6 +38,7 @@
         <td>{{x.opponentName}}</td>
         <td ng-if="x.open">{{"Open"}}</td>
         <td ng-if="x.open ==  false">{{"Completed"}}</td>
+        <td>{{x.stake}}</td>
         <td><button ng-click="withdraw(x)" class="btn btn-danger">Withdraw Challenge</button></td>
 
 
@@ -58,6 +60,7 @@
         <th>Challenger</th>
         <th>Opponent</th>
         <th>Status</th>
+        <th>Stake</th>
         <th colspan="2">Option</th>
     </tr>
     </thead>
@@ -68,6 +71,7 @@
         <td>{{x.opponentName}}</td>
         <td ng-if="x.open">{{"Open"}}</td>
         <td ng-if="x.open ==  false">{{"Completed"}}</td>
+        <td>{{x.stake}}</td>
         <td><button ng-click="accept(x)" class="btn btn-success">Accept</button></td>
         <td><button ng-click="withdraw(x)" class="btn btn-warning">Decline</button></td>
 
