TODO Convert Margin to account Currency (USD)

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -121,6 +121,11 @@
                 <td> <button ng-click="decrement();">-</button></td>
             </tr>
 
+            <tr>
+                <td>{{reqSym}}</td>
+                <td colspan="2">{{marginRequiredView}}</td>
+            </tr>
+
             </tbody>
         </table>
         </md-table-container>
