Margin required in account currency implemented

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -126,6 +126,11 @@
                 <td colspan="2">{{marginRequiredView}}</td>
             </tr>
 
+            <tr>
+                <td>$</td>
+                <td colspan="2">{{marginRequiredAccountView}}</td>
+            </tr>
+
             </tbody>
         </table>
         </md-table-container>
