--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -17,9 +17,9 @@
 
     <tbody>
     <tr>
-        <td>${{available}}</td>
+        <td>${{availableView}}</td>
         <td>${{equityView}}</td>
-        <td>${{mMargin}}</td>
+        <td>${{mMarginView}}</td>
         <td>${{profitAndLossView}}</td>
     </tr>
     </tbody>
